--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "sass": "^1.65.1",
     "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
